--- a/sample/src/main/res/layout/activity_dummy.xml
+++ b/sample/src/main/res/layout/activity_dummy.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/coordinatorLayout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".dynamic.DummyActivity">
+
+  <com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/appbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <com.google.android.material.appbar.CollapsingToolbarLayout
+      android:id="@+id/toolbarLayout"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/expanded_height"
+      app:layout_scrollFlags="scroll|exitUntilCollapsed"
+      app:maxLines="2">
+
+      <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        app:layout_collapseMode="pin"
+        app:title="Nothing to see here, just toolbars"/>
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
+  </com.google.android.material.appbar.AppBarLayout>
+
+  <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DummyActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+
+      <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="?actionBarSize"
+        android:background="@android:color/holo_red_dark"
+        app:subtitle="Example"
+        app:title="Example"/>
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/expanded_height"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:maxLines="2">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                app:layout_collapseMode="pin"
-                app:title="Nothing to see here, just toolbars"/>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
+      <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="100dp"
+        android:background="@android:color/holo_blue_dark"
+        app:subtitle="Example"
+        app:title="Example"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+      <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@android:color/holo_green_dark"
+        app:subtitle="Example"
+        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+        app:title="Example"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
 
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:background="@android:color/holo_red_dark"
-                app:subtitle="Example"
-                app:title="Example"/>
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:background="@android:color/holo_blue_dark"
-                app:subtitle="Example"
-                app:title="Example"/>
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:background="@android:color/holo_green_dark"
-                app:subtitle="Example"
-                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-                app:title="Example"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:background="@android:color/holo_orange_dark"
-                app:subtitle="Example"
-                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-                app:title="Example"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+      <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@android:color/holo_orange_dark"
+        app:subtitle="Example"
+        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+        app:title="Example"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
+    </LinearLayout>
+  </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
